--- a/index.html
+++ b/index.html
@@ -3,14 +3,12 @@
 <html>
 
 <head>
-<script   src="http://code.jquery.com/jquery-2.2.4.min.js"
-integrity="sha256-BbhdlvQf/xTY9gja0Dq3HiwQF8LaCRTXxZKRutelT44="
-crossorigin="anonymous"></script>
+
+<script type="text/javascript" src="jquery-3.1.0.min.js"></script>
 <script type="text/javascript" src="main.js"></script>
 <script type="text/javascript" src="bootstrap.js"></script>
 <link rel="stylesheet" type="text/css" href="main.css"></link>
 <link rel="stylesheet" type="text/css" href="bootstrap.css"></link>
-<link href='http://fonts.googleapis.com/css?family=Open+Sans:400;300' rel='stylesheet' type='text/css'>
 </head>
 
 <body>
