--- a/officer-information.html
+++ b/officer-information.html
@@ -149,7 +149,7 @@ crossorigin="anonymous"></script>
             <ul>
               <li><p id="pres-p">Organize and oversee performances for sites</p></li>
               <li><p id="pres-p">Coordinate travel arrangements to sites with parent volunteers and performing Tri-M members</p></li>
-              <li><p id="pres-p">Oversee rehearsal and performance “readiness” prior to site visits</p></li>
+              <li><p id="pres-p">Oversee rehearsal and performance "readiness" prior to site visits</p></li>
               <li><p id="pres-p">Make monthly reports and invitations to membership about KC needs</p></li>
               <li><p id="pres-p">Serve as liaison between parents, chapter membership and site/facility managers</p></li>
               <li><p id="pres-p">Make arrangements to provide flowers that will be distributed to the residents at each site at the end of the performance</p></li>
