--- a/application-criteria.html
+++ b/application-criteria.html
@@ -3,12 +3,12 @@
 <html>
 
 <head>
-<script   src="https://code.jquery.com/jquery-2.2.4.js"   integrity="sha256-iT6Q9iMJYuQiMWNd9lDyBUStIq/8PuOW33aOqmvFpqI="   crossorigin="anonymous"></script>
+<script type="text/javascript" src="jquery-2.2.4.min.js"></script>
 <script type="text/javascript" src="main.js"></script>
 <script type="text/javascript" src="bootstrap.js"></script>
 <link rel="stylesheet" type="text/css" href="main.css"></link>
 <link rel="stylesheet" type="text/css" href="bootstrap.css"></link>
-<link href='http://fonts.googleapis.com/css?family=Open+Sans:400;300' rel='stylesheet' type='text/css'>
+
 </head>
 
 <body>
