--- a/application-checklist.html
+++ b/application-checklist.html
@@ -65,7 +65,7 @@
 
         <div id="descript-divider"></div>
 
-        <h3> Given an evaluation form to your current music teacher? </h3>
+        <h3> Given an evaluation form to your current ensemble teacher? </h3>
 
         <div id="descript-divider"></div>
 
@@ -73,7 +73,7 @@
 
         <div id="descript-divider"></div>
 
-        <h2> The induction ceremony for selected students and their respective families will be held on Tuesday, October 25th, 2016 at 7:30 PM in the MS Theatre. This is a mandatory event for all current and future members. </h3>
+        <h2> The induction ceremony for selected students and their families will be held on Tuesday, October 25th, 2016 at 7:30 PM in the MS Theatre. This is a mandatory event for all current and future members. </h3>
 
 
 
