--- a/application-criteria.html
+++ b/application-criteria.html
@@ -65,7 +65,7 @@
                     <li><p>A response to the Essential Question: "What makes me worthy of this distinction, and how will I contribute to the Tri-M Music Honor Society?"</p></li>
                   </ul>
             <li><p>Ensemble or Music Theory grade requirement of "93" and overall GPA (grade point average) of "85".</p></li>
-            <li><p>Four teacher evaluation forms from other subject areas</p></li>
+            <li><p>Four teacher evaluation forms from other non music teachers from the previous year.</p></li>
             <li><p>If you want a quick list to check off your progress go to the application checklist page!</p></li>
           </ul>
       </div>
