--- a/officer-information.html
+++ b/officer-information.html
@@ -110,13 +110,14 @@
 
       <div id="descript-divider"></div>
 
-  <h4 id="pres-h4">Treasure</h4>
+  <h4 id="pres-h4">Treasurer</h4>
     <ul>
-        <li><p id="pres-p">The chapter treasurer is only open to all grades. The treasurer will:</p>
+        <li><p id="pres-p">The chapter treasurer is open to all grade levels. The treasurer will:</p>
             <ul>
               <li><p id="pres-p">Collect all membership dues</p></li>
               <li><p id="pres-p">Keep an accurate record of all monies received and disbursed</p></li>
               <li><p id="pres-p">Present a report of the chapter's finances at each meeting</p></li>
+              <li><p id="pres-p">Sign all applicable forms</p></li>
             </ul>
           </li>
         </ul>
