--- a/application-download.html
+++ b/application-download.html
@@ -46,7 +46,7 @@
       </div>
       <div class="container" id="download-block">
 
-          <h3> Click here to download the application for membership in our chapter. This application is due bye XX/XX. Submit to Dr. Banks.</h3>
+          <h3> Click here to download all forms needed for applying for membership in our chapter. These forms are due bye XX/XX. Submit to Dr. Banks.</h3>
           <a href="#" class="btn btn-block btn-primary" id="download-button"><span class="glyphicon glyphicon-download-alt"></span> Download Application</a>
 
       </div>
