--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 
     <div class="container" id="container2">
       <h2 id="main-header-text">Welcome To The Briarcliff High School Tri-M Website!</h1>
-        <p id="main-header-subtext">This is the place to come for any and all information on our local chapter of this prestigious honor society. Whether you are a current member, a prospective member, or are just curious about the organization, all of you're questions can be answered here!</p>
+        <p id="main-header-subtext">This is the place to come for any and all information on our local chapter of this prestigious honor society. Whether you are a current member, a prospective member, or are just curious about the organization, all of your questions can be answered here!</p>
     </div>
   </div>
 
