--- a/application-download.html
+++ b/application-download.html
@@ -46,8 +46,10 @@
       </div>
       <div class="container" id="download-block">
 
-          <h3> Click here to download all forms needed for applying for membership in our chapter. These forms are due bye XX/XX. Submit to Dr. Banks.</h3>
-          <a href="#" class="btn btn-block btn-primary" id="download-button"><span class="glyphicon glyphicon-download-alt"></span> Download Application</a>
+          <h3> This page contains download links for all forms needed for applying for membership in our chapter. These forms are due bye XX/XX. Submit to Dr. Banks.</h3>
+          <a href="/Tri-M Website/downloadables/Tri-M INDUCTION PACKET 2016- 2017.docx" class="btn btn-block btn-primary" id="download-button" download="induction-packet.docx"><span class="glyphicon glyphicon-download-alt"></span> Download General Application Sheet</a>
+          <a href="/Tri-M Website/downloadables/Tri M Ensemble Teacher Evaluation and Recommendation Form.docx" class="btn btn-block btn-primary" id="download-button" download="ensemble-leader-eval.docx"><span class="glyphicon glyphicon-download-alt"></span> Download Evaluation Sheet For Ensemble Leader</a>
+          <a href="/Tri-M Website/downloadables/Tri-M Non Music Subject Area teacher evaluation form.docx" class="btn btn-block btn-primary" id="download-button" download="non-ensemble-eval.docx"><span class="glyphicon glyphicon-download-alt"></span> Download Evaluation Sheet For Non-Ensemble Non-Music Teachers</a>
 
       </div>
       <div class="container" id="color-block-right">
