--- a/calendar.html
+++ b/calendar.html
@@ -48,33 +48,22 @@
 
         <div id="descript-divider"></div>
 
-        <h2> September 7, 2016 </h3>
-        <h3> First Tri-M Meeting of the New Year </h5>
+        <h2> October 25, 2016 </h3>
+        <h3> Induction Ceremony </h5>
 
         <div id="descript-divider"></div>
 
-        <h2> September X, 2016 </h3>
-        <h3> Something Important </h5>
+        <h2> October 26, 2016 </h3>
+        <h3> Area-All State Rehersal </h5>
 
         <div id="descript-divider"></div>
 
-        <h2> September X, 2016 </h3>
-        <h3> Something Important </h5>
+        <h2> November 2, 2016 </h3>
+        <h3> First Tri-M meeting for new members </h5>
 
         <div id="descript-divider"></div>
 
-        <h2> August X, 2016 </h3>
-        <h3> Something Important </h5>
-
-        <div id="descript-divider"></div>
-
-        <h2> August X, 2016 </h3>
-        <h3> Something Important </h5>
-
-        <div id="descript-divider"></div>
-
-        <h2> August X, 2016 </h3>
-        <h3> Something Important </h5>
+  
 
 
 
