--- a/contact.html
+++ b/contact.html
@@ -46,38 +46,39 @@
 <div class="container" id="block-left">
     <img id="side-logo"src="Tri-M Logo gray.png"></img>
     <h3 id="contact1"> Faculty Advisor : Dr. John C Banks</h3>
-      <p id="contact">Contact for information regarding: X,Y,and Z
+      <p id="contact">Contact for information regarding: Membership
       <p id="contact">Email: jbanks@briarcliffschools.org
-      
 
-    <h3 id="contact"> Chapter President : Acting President</h3>
-        <p id="contact">Contact for information regarding: X,Y,and Z
-        <p id="contact">Email: apresident@briarcliffschools.org
 
-    <h3 id="contact"> Chapter Vice President : Acting Vice President</h3>
-        <p id="contact">Contact for information regarding: X,Y,and Z
-        <p id="contact">Email: avpresident@briarcliffschools.org
+    <h3 id="contact"> Chapter President : Kelly Hooper</h3>
+        <p id="contact">Contact for information regarding: General Questions
+        <p id="contact">Email: khooper17@briarcliffny.org
+
+    <h3 id="contact"> Chapter Vice President : Lin Xie</h3>
+        <p id="contact">Contact for information regarding: Upcoming Events
+        <p id="contact">Email: lxie17@briarcliffny.org
 
 
 </div>
 
-<h3 id="contact1"> Chapter Secretary : Acting Secretary</h3>
-    <p id="contact">Contact for information regarding: X,Y,and Z
-    <p id="contact">Email: asecretary@briarcliffschools.org
+  <h3 id="contact1"> Chapter Secretary : Henry Ross</h3>
+    <p id="contact">Contact for information regarding: Forms, Attendance
+    <p id="contact">Email: asecretary@briarcliffny.org
 
 
-<h3 id="contact2"> Chapter Treasurer : Acting Treasurer</h3>
-    <p id="contact">Contact for information regarding: X,Y,and Z
-    <p id="contact">Email: atreasurer@briarcliffschools.org
+      <h3 id="contact2"> Chapter Treasurer : Samuel Driver</h3>
+    <p id="contact">Contact for information regarding: Payment
+    <p id="contact">Email: sdriver17@briarcliffny.org
 
 
-<h3 id="contact2"> Website Engineer : Samuel Driver</h3>
+  <h3 id="contact2"> Website Engineer : Samuel Driver</h3>
     <p id="contact">Contact for information regarding: Website Issues or Questions
-    <p id="contact">Email: sdriver17@briarcliffschools.org
+    <p id="contact">Email: sdriver17@briarcliffny.org
 
-<div id="wrap-prevent">
-  <h2 id="contact-h"> Any general questions that do not fit a specific category should be directed to the chapter president.</h2>
-</div>
+      <div id="wrap-prevent">
+        <h2 id="contact-h"> Any general questions that do not fit a specific category should be directed to the chapter president.</h2>
+      </div>
+
 <footer class="footer">
     <div class="container">
         <p id="foot-text-contact">Website Created and Maintained by Sam Driver</p>
