--- a/index.html
+++ b/index.html
@@ -65,28 +65,28 @@
       <div class="item active">
         <img  id="car-pic" src=induction1.jpg></img>
         <div class="carousel-caption">
-          <p id="car-capt">XXXXXXXXXXXXXXXXX</p>
+          <p id="car-capt">Last years induction ceremony!</p>
         </div>
       </div>
 
       <div class="item">
         <img id="car-pic"  src=resteraunt1.JPG></img>
         <div class="carousel-caption">
-          <p id="car-capt">XXXXXXXXXXXXXXXXX</p>
+          <p id="car-capt">Dinner at last years opera trip!</p>
         </div>
       </div>
 
       <div class="item">
         <img id="car-pic"  src=resteraunt2.JPG></img>
         <div class="carousel-caption">
-          <p id="car-capt">XXXXXXXXXXXXXXXXX</p>
+          <p id="car-capt">More dinner at last years opera trip!</p>
         </div>
       </div>
 
       <div class="item">
         <img id="car-pic" src=fountain1.JPG></img>
         <div class="carousel-caption">
-          <p id="car-capt">XXXXXXXXXXXXXXXXX</p>
+          <p id="car-capt">Funny faces outside lincoln center!</p>
         </div>
       </div>
     </div>
