--- a/calendar.html
+++ b/calendar.html
@@ -63,10 +63,15 @@
 
         <div id="descript-divider"></div>
 
-  
+        <h2> November 9, 2016 </h3>
+        <h3> Area All-State rehersal </h5>
 
+        <div id="descript-divider"></div>
 
+        <h2> November 10, 2016 </h3>
+        <h3> Area All-State Concert </h5>
 
+        <div id="descript-divider"></div>
 
       </div>
       <div class="container" id="color-block-right-3">
