New Pic + Scroll Fix

--- a/index.html
+++ b/index.html
@@ -77,9 +77,9 @@
       </div>
 
       <div class="item">
-        <img id="car-pic"  src=resteraunt2.JPG></img>
+        <img id="car-pic"  src=induction2.jpg></img>
         <div class="carousel-caption">
-          <p id="car-capt">More dinner at last years opera trip!</p>
+          <p id="car-capt">The 2016-2017 inductees all lined up!</p>
         </div>
       </div>
 
