--- a/by-laws.html
+++ b/by-laws.html
@@ -99,11 +99,11 @@
         <h4 id="selection">NON-SELECTION: TRI-M MEMBERSHIP IS AN HONOR BESTOWED UPON A STUDENT AS A PRIVILEGE, NOT A RIGHT. SPECIAL EFFORTS WILL BE MADE TO EXPLAIN THE SELECTION PROCESS TO THOSE MUSIC STUDENTS WHO ARE ACDEMICALLY ELIGIBLE YET NOT SELECTED FOR CANDIDACY</h3>
         <h4 id="selection">SELECTION REVIEW: TRI-M AND NAFME SHALL NOT REVIEW THE JUDGEMENT OF THE CHAPTER ADVISOR OR ANY COMMITTEE INVOLVED REGARDING SELECTION OF INDIVIDUAL MEMBERS</h3>
     </div>
-      <footer class="footer">
+      <!-- <footer class="footer">
           <div class="container">
               <p id="foot-text-home">Website Created and Maintained by Sam Driver</p>
           </div>
-      </footer>
+      </footer> -->
 
 
   </body>
