--- a/contact.html
+++ b/contact.html
@@ -78,11 +78,11 @@
       <div id="wrap-prevent">
         <h2 id="contact-h"> Any general questions that do not fit a specific category should be directed to the chapter president.</h2>
       </div>
-
+<!-- 
 <footer class="footer">
     <div class="container">
         <p id="foot-text-contact">Website Created and Maintained by Sam Driver</p>
     </div>
-</footer>
+</footer> -->
 </body>
 </html>
