--- a/index.html
+++ b/index.html
@@ -107,11 +107,11 @@
       <p id="descript-para"> The Tri-M (Modern Music Makers) Music Honor Society is an international program dedicated to the recognition of exceptional music students in grades 6-12 that meet a notable music, academic, leadership, and character criteria asked of every Tri-M member. Tri-M is a program of NAfME: The National Association for Music Education, which is the largest arts education association in the world. The purpose of this organization is to inspire music participation, create enthusiasm for scholarship, stimulate a desire to render service and promote leadership in music students of secondary schools.</p>
     </div>
 
-    <footer class="footer">
+    <!-- <footer class="footer">
         <div class="container">
             <p id="foot-text-home">Website Created and Maintained by Sam Driver</p>
         </div>
-    </footer>
+    </footer> -->
 
 
 </body>
