--- a/service-projects.html
+++ b/service-projects.html
@@ -74,12 +74,12 @@
       </div>
       <div class="container" id="color-block-right-2">
       </div>
-
+<!-- 
       <footer class="footer">
           <div class="container">
               <p id="foot-text-home">Website Created and Maintained by Sam Driver</p>
           </div>
-      </footer>
+      </footer> -->
 
 
   </body>
