--- a/application-download.html
+++ b/application-download.html
@@ -55,11 +55,11 @@
       <div class="container" id="color-block-right">
       </div>
 
-<footer class="footer">
+<!-- <footer class="footer">
     <div class="container">
         <p id="foot-text-home">Website Created and Maintained by Sam Driver</p>
     </div>
-</footer>
+</footer> -->
 
 
 </body>
