--- a/calendar.html
+++ b/calendar.html
@@ -77,11 +77,11 @@
       <div class="container" id="color-block-right-3">
       </div>
 
-      <footer class="footer">
+      <!-- <footer class="footer">
           <div class="container">
               <p id="foot-text-home">Website Created and Maintained by Sam Driver</p>
           </div>
-      </footer>
+      </footer> -->
 
 
   </body>
