--- a/officer-information.html
+++ b/officer-information.html
@@ -160,12 +160,12 @@
           </li>
         </ul>
 </div>
-<footer class="footer">
+<!-- <footer class="footer">
     <div class="container">
         <p id="foot-text-home">Website Created and Maintained by Sam Driver</p>
     </div>
 </footer>
-
+ -->
 
 </body>
 
