--- a/task-sheet.html
+++ b/task-sheet.html
@@ -53,11 +53,11 @@
       <div class="container" id="color-block-right">
       </div>
 
-<footer class="footer">
+<!-- <footer class="footer">
     <div class="container">
         <p id="foot-text-home">Website Created and Maintained by Sam Driver</p>
     </div>
-</footer>
+</footer> -->
 
 
 </body>
