--- a/task-sheet.html
+++ b/task-sheet.html
@@ -46,7 +46,7 @@
       </div>
       <div class="container" id="download-block">
 
-          <h3> Click here to download the task sheet for recording taks done in the 2016-2017 school year. Sheets are due by High School graduatopm. Submit to any of the organizations officers. An example of the sheet can be seen below.</h3>
+          <h3> Click here to download the task sheet for recording taks done in the 2016-2017 school year. Sheets are due by High School graduation. Submit to any of the organizations officers. An example of the sheet can be seen below.</h3>
           <a href="#" class="btn btn-block btn-primary" id="download-button"><span class="glyphicon glyphicon-download-alt"></span> Download Task Sheet</a>
 
       </div>
