--- a/service-projects.html
+++ b/service-projects.html
@@ -11,7 +11,7 @@
 
 </head>
 
-<body>
+<body id="gray">
   <div class="header">
         <div class="container" id="container1">
 
@@ -74,7 +74,7 @@
       </div>
       <div class="container" id="color-block-right-2">
       </div>
-<!-- 
+<!--
       <footer class="footer">
           <div class="container">
               <p id="foot-text-home">Website Created and Maintained by Sam Driver</p>
